--- a/about.html
+++ b/about.html
@@ -12,12 +12,13 @@
     />
     <link rel="shortcut icon" href="./assets/images/bookmark.png" />
     <link rel="bookmark" href="./assets/images/bookmark.png" />
+    <meta name="format-detection" content="telephone=no" />
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no" />
 
-    <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon" />
-    <link href="./assets/favicon.ico" rel="icon" />
+    <link href="./assets/images/bookmark.png" rel="apple-touch-icon" />
+    <link href="./assets/images/selfie.jpg" rel="icon" />
 
     <title>About me</title>
 
@@ -126,7 +127,7 @@
               <div class="circle3"></div>
               <span class="word">影視・美術助理</span>
               <p class="year1">
-                <span class="year">2013-2106</span
+                <span class="year">2013-2016</span
                 ><br />電影《KANO》、廣告MV、展場等
               </p>
             </div>
