--- a/project.html
+++ b/project.html
@@ -16,8 +16,8 @@
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no" />
 
-    <link href="./assets/apple-icon-180x180.png" rel="apple-touch-icon" />
-    <link href="./assets/favicon.ico" rel="icon" />
+    <link href="./assets/images/bookmark.png" rel="apple-touch-icon" />
+    <link href="./assets/images/selfie.jpg" rel="icon" />
 
     <title>Graphic Design・Layout</title>
 
