--- a/about.html
+++ b/about.html
@@ -84,16 +84,16 @@
 
           <p>
             2016年進入百貨業廣告宣傳部門，擔任設計人員，負責平面宣傳物、檔期商品展點之規劃與發包監工等，
-            亦包含館內活動佈置與聯名設計等相關項目。憑著過去拍片職務培養的抗壓、獨立性與合作力，以一擋三走過百貨更名轉型期，
+            亦包含館內活動佈置、聯名設計等相關項目。憑著過去拍片職務培養的抗壓、獨立性與合作力，以一擋三走過百貨更名轉型期，
             並主動建置倉庫管理清冊與優化發包流程，增加道具翻新使用率和加速廠商溝通。任職一年內獲得升等，集團的年度績效均為甲級以上。
             <br />
             <br />
             2020年回國後至新興商場之集團任職，擔任重點分店之設計人員，負責視覺設計、文宣品之更新設定與廠商開發等，
-            亦支援集團各事業之相關視覺製作物。期間經歷百貨電商購物上線，學習轉型數位的思維與版面操作，同行銷團隊確立商場的視覺與作業模式。
+            亦支援集團各事業之相關視覺物、主題餐廳視覺擔當。期間經歷百貨電商購物上線，學習轉型數位的思維與版面操作，同行銷團隊確立商場的廣宣作業模式。
             <br />
             <br />
-            在此之前，從事影視幕後美術工作，工作內容多元，涵蓋前期風格發想與實際開拍的佈置執行，對於空間風格展演有熱情與想法。
-            至今已參與8部電影、廣告、短片之製作。
+            在此之前，從事影視幕後美術工作，工作內容多元，涵蓋前期風格發想與實際開拍的佈置執行；
+            至今已參與8部電影和許多廣告、短片。累積美編創作經驗多年，對於平面＆空間風格製作有熱情與想法。
           </p>
         </div>
       </div>
@@ -116,7 +116,8 @@
               <div class="circle1"></div>
               <span class="word">日本・工讀</span>
               <p class="year1">
-                <span class="year">2019-2020</span><br />Working Holiday<br />
+                <span class="year">2019-2020</span><br />Working Holiday
+                打工遊學<br />
               </p>
               <div class="circle2"></div>
               <span class="word">百貨・設計人員</span>
@@ -143,7 +144,7 @@
             <li>Microsoft Office</li>
             <li>英文 TOEIC 785</li>
             <li>日語 JLPT N3合格</li>
-            <li>Learning 網頁製作HTML、CSS</li>
+            <li>Always Keep Learning</li>
           </ul>
         </div>
 
