--- a/project3.html
+++ b/project3.html
@@ -84,7 +84,7 @@
           <div>
             <div class="row">
               <div>
-                <p class="col-xs-12">#百貨商場・主題商品陳列點</p>
+                <span class="col-xs-12">#百貨商場・主題商品陳列點</span>
                 <p>
                   <img
                     class="img-responsive"
@@ -103,6 +103,7 @@
                   />
                 </p>
               </div>
+              <br />
               <div>
                 <span class="col-xs-12">#百貨商場・活動互動點位設計</span>
                 <p>
