--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
             亦支援集團各事業之相關視覺物、主題餐廳視覺擔當。期間經歷百貨電商購物上線，學習轉型數位的思維與版面操作，同行銷團隊確立商場的廣宣作業模式。
             <br />
             <br />
-            在此之前，從事影視幕後美術工作，工作內容多元，涵蓋前期風格發想與實際開拍的佈置執行；
+            在此之前，從事影視幕後美術工作，工作內容多元，涵蓋前期風格發想、產生與實際開拍的佈置執行；
             至今已參與8部電影和許多廣告、短片。累積美編創作經驗多年，對於平面＆空間風格製作有熱情與想法。
           </p>
         </div>
@@ -141,6 +141,7 @@
           <ul style="margin-left: -30px">
             <li>平面設計：主題視覺、宣傳排版</li>
             <li>陳列設計：主題道具、佈置執行</li>
+            <li>電腦繪圖軟體操作</li>
             <li>Microsoft Office</li>
             <li>英文 TOEIC 785</li>
             <li>日語 JLPT N3合格</li>
@@ -161,6 +162,13 @@
             Photoshop
             <div class="skillborder2">
               <div class="inside_ps"></div>
+            </div>
+          </div>
+
+          <div class="skill_name6">
+            InDesign
+            <div class="skillborder6">
+              <div class="inside_id"></div>
             </div>
           </div>
 
