--- a/project4.html
+++ b/project4.html
@@ -84,7 +84,7 @@
           <div>
             <div class="row">
               <div>
-                <p class="col-xs-12">#百貨・IP商品-會員禮設計</p>
+                <p class="col-xs-12">#百貨・IP商品－會員禮設計</p>
                 <p>
                   <img
                     class="img-responsive"
@@ -96,7 +96,7 @@
               <br />
               <div>
                 <span class="col-xs-12"
-                  >#海外聯名販售商品- 統一阿薩姆小奶茶 x 雪鈴兔</span
+                  >#海外聯名販售商品－統一阿薩姆小奶茶 x 雪鈴兔</span
                 >
                 <p>
                   <img
@@ -109,7 +109,7 @@
               <br />
               <div>
                 <span class="col-xs-12"
-                  >#百貨・限量布偶包裝盒- Daniel Wong x 雪鈴兔聖誕活動</span
+                  >#百貨・限量布偶包裝盒－Daniel Wong x 雪鈴兔聖誕活動</span
                 >
                 <p>
                   <img
