--- a/project5.html
+++ b/project5.html
@@ -85,8 +85,9 @@
             <div class="row">
               <div>
                 <p class="col-xs-12">
-                  #電影廣告美術助理：協助美術指導提案，包含場地探勘、視覺風格＆文本資料蒐集。
-                  拍攝期間之場佈執行、美術贊助商開發、道具採購製作與陳舊質感等。
+                  #電影廣告美術助理－
+                  協助美術指導提案，包含前期場地探勘、視覺風格＆文本資料蒐集、美術贊助商開發；
+                  平面物＆道具製作與採購、拍攝期間之場佈執行等。
                 </p>
                 <p>
                   <img
