--- a/project2.html
+++ b/project2.html
@@ -85,7 +85,7 @@
             <div class="row">
               <div>
                 <p class="col-xs-12">
-                  #主題餐廳視覺：整體文宣物＆社群圖、餐點拍攝
+                  #主題餐廳視覺－整體文宣物＆社群圖、餐點拍攝
                 </p>
                 <br />
                 <p>
