--- a/about.html
+++ b/about.html
@@ -92,8 +92,8 @@
             亦支援集團各事業之相關視覺物、主題餐廳視覺擔當。期間經歷百貨電商購物上線，學習轉型數位的思維與版面操作，同行銷團隊確立商場的廣宣作業模式。
             <br />
             <br />
-            在此之前，從事影視幕後美術工作，工作內容多元，涵蓋前期風格發想、產生與實際開拍的佈置執行；
-            至今已參與8部電影和許多廣告、短片。累積美編創作經驗多年，對於平面＆空間風格製作有熱情與想法。
+            在此之前，從事影視幕後美術工作，工作內容多元，涵蓋前期風格發想、產生與實際開拍的佈置執行；至今已參與8部電影和許多廣告、短片。
+            累積平面和陳列視覺設計相關職務多年，對行銷活動、品牌商品的風格主題包裝、空間展點宣傳有經驗與想法。
           </p>
         </div>
       </div>
